<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|end"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/viewNumeroControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_numero_control" />

    <EditText
        android:id="@+id/txtNumeroControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNumeroControl"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNombre"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewCarrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Carrera" />

    <EditText
        android:id="@+id/txtCarrera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCarrera"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewSemestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_semestre" />

    <EditText
        android:id="@+id/txtSemestre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewSemestre"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_grupo" />

    <EditText
        android:id="@+id/txtGrupo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewGrupo"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buton_guardar"
        android:textSize="20sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />

</LinearLayout>